RESOLVED FIXED37596
[Qt] QScriptEngine::evaluate has memory leak.
https://bugs.webkit.org/show_bug.cgi?id=37596
Summary [Qt] QScriptEngine::evaluate has memory leak.
Jędrzej Nowacki
Reported 2010-04-14 12:30:17 PDT
Method QScriptValuePrivate* QScriptEnginePrivate::evaluate(const QString& program, const QString& fileName, int lineNumber) creates two temporary values, but it doesn't release them. That produces memory leak.
Attachments
Fix v1 (1.96 KB, patch)
2010-04-14 12:36 PDT, Jędrzej Nowacki
kenneth: review-
Fix v2 (1.97 KB, patch)
2010-04-14 16:54 PDT, Jędrzej Nowacki
no flags
Jędrzej Nowacki
Comment 1 2010-04-14 12:36:20 PDT
Kenneth Rohde Christiansen
Comment 2 2010-04-14 16:01:01 PDT
Comment on attachment 53353 [details] Fix v1 > + Evaluates given JavaScript program and returns result of the evaluation. > + \attention this function doesn't take parameters ownership. this function doesn't take ownership of the parameters.
Jędrzej Nowacki
Comment 3 2010-04-14 16:54:01 PDT
Created attachment 53385 [details] Fix v2 Done
WebKit Commit Bot
Comment 4 2010-04-15 02:53:59 PDT
Comment on attachment 53385 [details] Fix v2 Clearing flags on attachment: 53385 Committed r57637: <http://trac.webkit.org/changeset/57637>
WebKit Commit Bot
Comment 5 2010-04-15 02:54:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.