2010-04-15  Jedrzej Nowacki  <jedrzej.nowacki@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        Fix memory leak in QScriptEngine::evaluate().

        QScriptEnginePrivate::evaluate should release temporary variables.

        [Qt] QScriptEngine::evaluate has memory leak.
        https://bugs.webkit.org/show_bug.cgi?id=37596

        * qt/api/qscriptengine_p.cpp:
        (QScriptEnginePrivate::evaluate):
        * qt/api/qscriptengine_p.h:

Canonical link: https://commits.webkit.org/48924@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57637 268f45cc-cd09-0410-ab3c-d52691b4dbfc