JavaScriptCore/qt/api/qscriptengine_p.h
@@ -67,6 +67,11 @@ private:
 };
 
 
+/*!
+  Evaluates given JavaScript program and returns result of the evaluation.
+  \attention this function doesn't take ownership of the parameters.
+  \internal
+*/
 JSValueRef QScriptEnginePrivate::evaluate(JSStringRef program, JSStringRef fileName, int lineNumber)
 {
     JSValueRef exception;
